launcher: update README.md now that the project is being published